--- a/work/index.html
+++ b/work/index.html
@@ -61,7 +61,7 @@
 
 		<div class="je-top-bar sticky">
   		<div class="inner">
-    		<h1><a href="../index.html">JON EVA <span>| PRODUCT DESIGNER</span></a></h1>
+    		<h1><a href="www.joneva.consulting">JON EVA <span>| PRODUCT DESIGNER</span></a></h1>
        	<a class="hamburger-v2 open-primary-navigation" href="index.html#">
         	<img src="../site/templates/images/menu@2x.png" />
     		</a>
