--- a/work/bc/index.html
+++ b/work/bc/index.html
@@ -39,7 +39,7 @@
 
     <div id="primary-navigation">
       <div class="inner">
-        <a href="index.html#" class="close-primary-navigation">
+        <a href="../../" class="close-primary-navigation">
           <img src="../../site/templates/images/menu_close@2x.png" style="width: 22px;height: 22px;margin-left:10px; margin-bottom: 2px" />
         </a>
       </div>
