--- a/work/cbb/index.html
+++ b/work/cbb/index.html
@@ -78,7 +78,7 @@
     <!-- main content / not off canvas -->
     <div class="je-top-bar sticky ">
       <div class="inner">
-        <h1><a href="index.html#">JON EVA <span id="je-id">| PRODUCT DESIGNER</span></a></h1>
+        <h1><a href="../../">JON EVA <span id="je-id">| PRODUCT DESIGNER</span></a></h1>
           <a class="hamburger-v2 open-primary-navigation" href="index.html#">
           <img src="../../site/templates/images/menu@2x.png" />
           </a>
