--- a/work/bc/index.html
+++ b/work/bc/index.html
@@ -39,7 +39,7 @@
 
     <div id="primary-navigation">
       <div class="inner">
-        <a href="../../" class="close-primary-navigation">
+        <a href="index.html#" class="close-primary-navigation">
           <img src="../../site/templates/images/menu_close@2x.png" style="width: 22px;height: 22px;margin-left:10px; margin-bottom: 2px" />
         </a>
       </div>
@@ -78,7 +78,7 @@
     <!-- main content / not off canvas -->
     <div class="je-top-bar sticky ">
       <div class="inner">
-        <h1><a href="index.html#">JON EVA <span id="je-id">| PRODUCT DESIGNER</span></a></h1>
+        <h1><a href="../../">JON EVA <span id="je-id">| PRODUCT DESIGNER</span></a></h1>
           <a class="hamburger-v2 open-primary-navigation" href="index.html#">
           <img src="../../site/templates/images/menu@2x.png" />
           </a>
