--- a/work/ec/index.html
+++ b/work/ec/index.html
@@ -93,6 +93,10 @@
           <div class="master-slider ms-skin-contrast" id="masterslider">
 
             <div class="ms-slide" data-fill-mode="fit" data-delay="5">
+
+                <!-- slide background -->
+                <img src="img/ec-vid-sub-01.gif" data-src="img/ec-vid-sub-01.gif"/>
+
                 <!-- slide background video -->
                 <video data-autopause="true" data-mute="false" data-loop="false" data-fill-mode="fill">
                     <source id="mp4" src="img/1-ECtimeline.mp4" type="video/mp4"/>
