--- a/work/ec/index.html
+++ b/work/ec/index.html
@@ -95,7 +95,7 @@
             <div class="ms-slide" data-fill-mode="fit" data-delay="5">
 
                 <!-- slide background -->
-                <img src="img/ec-vid-sub-01.gif" data-src="img/ec-vid-sub-01.gif"/>
+                <img src="img/1-ECtimeline.gif" data-src="img/1-ECtimeline.gif"/>
 
                 <!-- slide background video -->
                 <video data-autopause="true" data-mute="false" data-loop="false" data-fill-mode="fill">
