--- a/work/ec/index.html
+++ b/work/ec/index.html
@@ -95,7 +95,7 @@
             <div class="ms-slide" data-fill-mode="fit" data-delay="5">
 
                 <!-- slide background -->
-                <img src="img/1-ECtimeline.gif" width="1920" height="1280"/>
+                <img src="img/1-ECtimeline.gif" style=" position: relative;margin-top: -2px;"/>
 
                 <!-- slide background video -->
                 <video data-autopause="true" data-mute="false" data-loop="false" data-fill-mode="fill">
