--- a/work/bc/index.html
+++ b/work/bc/index.html
@@ -93,6 +93,10 @@
           <div class="master-slider ms-skin-contrast" id="masterslider">
 
             <div class="ms-slide" data-fill-mode="fit" data-delay="5">
+
+                <!-- slide background -->
+                <img src="img/1-BCMobile.gif" style=" position: relative;top: -2px;"/>
+
                 <!-- slide background video -->
                 <video data-autopause="true" data-mute="false" data-loop="false" data-fill-mode="fill">
                     <source id="mp4" src="img/1-BCMobile.mp4" type="video/mp4"/>
@@ -102,6 +106,10 @@
               <img src="../masterslider/style/blank.gif" data-src="img/2-BCmultiple.jpg" alt=""/>
             </div>
             <div class="ms-slide" data-fill-mode="fit" data-delay="5">
+
+                <!-- slide background -->
+                <img src="img/3-BCDesktop.gif" style=" position: relative;top: -2px;"/>
+
                 <!-- slide background video -->
                 <video data-autopause="true" data-mute="false" data-loop="false" data-fill-mode="fill">
                     <source id="mp4" src="img/3-BCDesktop.mp4" type="video/mp4"/>
