--- a/work/hp/index.html
+++ b/work/hp/index.html
@@ -94,12 +94,20 @@
                 <img src="../masterslider/style/blank.gif" data-src="img/HP-1.jpg" alt=""/>
             </div>
             <div class="ms-slide" data-fill-mode="fit" data-delay="5">
+
+                <!-- slide background -->
+                <img src="img/HP-chart-1280.png" style=" position: relative;top: -2px;"/>
+
                 <!-- slide background video -->
                 <video data-autopause="true" data-mute="false" data-loop="false" data-fill-mode="fill">
                     <source id="mp4" src="img/HP-devices-1280.mp4" type="video/mp4"/>
                 </video>
             </div>
             <div class="ms-slide" data-fill-mode="fit" data-delay="5">
+
+                <!-- slide background -->
+                <img src="img/HP-devices-1280.png" style=" position: relative;top: -2px;"/>
+
                 <!-- slide background video -->
                 <video data-autopause="true" data-mute="false" data-loop="false" data-fill-mode="fill">
                     <source id="mp4" src="img/HP-chart-1280.mp4" type="video/mp4"/>
