invue video gifs

--- a/work/invue/index.html
+++ b/work/invue/index.html
@@ -88,6 +88,10 @@
         <!-- masterslider -->
           <div class="master-slider ms-skin-contrast" id="masterslider">
             <div class="ms-slide" data-fill-mode="fit" data-delay="5">
+
+                <!-- slide background -->
+                <img src="img/1-invue_consumer_kiosk_720.gif" style=" position: relative;top: -2px;"/>
+
                 <!-- slide background video -->
                 <video data-autopause="true" data-mute="false" data-loop="false" data-fill-mode="fill">
                     <source id="mp4" src="img/1-invue_consumer_kiosk_720.mp4" type="video/mp4"/>
