--- a/work/opd/index.html
+++ b/work/opd/index.html
@@ -93,6 +93,10 @@
           <div class="master-slider ms-skin-contrast" id="masterslider">
 
             <div class="ms-slide" data-fill-mode="fit" data-delay="5">
+
+                <!-- slide background -->
+                <img src="img/1-opd.gif" style=" position: relative;top: -2px;"/>
+
                 <!-- slide background video -->
                 <video data-autopause="true" data-mute="false" data-loop="false" data-fill-mode="fill">
                     <source id="mp4" src="img/1-opd.mp4" type="video/mp4"/>
