title skrim test 9

--- a/work/invue/index.html
+++ b/work/invue/index.html
@@ -120,7 +120,7 @@
 
           <h1 class="animated wow fadeIn" data-wow-delay="0s">
           InVue</h1>
-          <p class="JE-description">This InVue product is an end-to-end solution built for electronics retailers. The design requirements considered 7 different personas combining with 4 product use cases. The software suite enables retailers to design kiosk touch-screen experiences, manage inventory and compile data visualized reports based on in-store consumer interaction metrics. The software was built to accommodate 10 different languages and was deployed worldwide.
+          <p class="JE-description">This InVue software suite is an end-to-end solution built for electronics retailers. The design requirements built 7 different personas and considered 4 use cases. The software enables retailers to design kiosk touch-screen experiences, manage inventory and compile data visualized reports based on in-store consumer interaction metrics. The product was released in 10 different languages and deployed worldwide.
           </p>
 
         </div>
