--- a/work/index.html
+++ b/work/index.html
@@ -73,77 +73,98 @@
 			<div id="work">
 
         <div class="project-item">
-          <a href="ec/index.html">
-            <div id="je-motion-ec" style="max-width:300px">
+
+          <div class="title-skrim">Employee Channel</div>
+
+          <a href="work/ec/index.html">
+              <div id="je-motion-ec" style="max-width:300px">
+                <span class="title-wrapper">
+                  <span class="title" style=" margin: -3% 0 30% 0;background-color: rgba(255, 255, 255, 0);">
+                    Employee Channel
+                  </span>
+                </span>
+              </div>
+          </a>
+        </div>
+
+        <div class="project-item">
+
+          <div class="title-skrim" style="height: 600px;padding-top: 8em;">Superbowl 35</div>
+
+          <a href="work/superbowl/index.html">
+            <img src="site/assets/sb35.jpg" width="600" height="1200" style="max-width:300px" alt="">
+            <span class="title-wrapper">
+              <span class="title">
+                Superbowl 35
+              </span>
+            </span>
+          </a>
+        </div>
+
+        <div class="project-item">
+
+          <div class="title-skrim">Brite Class</div>
+
+          <a href="work/bc/index.html">
+            <div id="je-motion-bc" style="max-width:300px">
+              <span class="title-wrapper">
+               <span class="title">
+                Brite Class
+               </span>
+              </span>
+            </div>
+          </a>
+        </div>
+
+        <div class="project-item">
+
+          <div class="title-skrim">Identity Design</div>
+
+          <a href="work/identity/index.html">
+            <div id="je-motion-qiq" style="max-width:300px">
               <span class="title-wrapper">
                 <span class="title" style="margin: -3% 0 30% 0;">
-                  Employee Channel
+                  Identity Design
+                </span>
+            </span>
+          </div>
+          </a>
+        </div>
+
+        <div class="project-item">
+
+          <div class="title-skrim">Outpost Digital</div>
+
+          <a href="work/opd/index.html">
+            <div id="je-motion" style="max-width:300px">
+              <span class="title-wrapper">
+                <span class="title" style="margin: -3% 0 30% 0;">
+                  Outpost Digital
                 </span>
               </span>
             </div>
           </a>
         </div>
 
-				<div class="project-item">
-					<a href="superbowl/index.html">
-						<img src="../site/assets/sb35.jpg" width="600" height="1200" style="max-width:300px" alt="">
-						<span class="title-wrapper">
-							<span class="title">
-								Superbowl 35
-							</span>
-						</span>
-					</a>
-				</div>
+        <div class="project-item">
 
-				<div class="project-item">
-					<a href="bc/index.html">
-						<div id="je-motion-bc" style="max-width:300px">
-						  <span class="title-wrapper">
-							 <span class="title">
-								BriteClass
-							 </span>
-						  </span>
-            </div>
-					</a>
-				</div>
+          <div class="title-skrim" style="width: 100%; padding-top: 20%;">HP Enterprise</div>
 
-				<div class="project-item">
-					<a href="identity/index.html">
-						<div id="je-motion-qiq" style="max-width:300px">
-							<span class="title-wrapper">
-								<span class="title" style="margin: -3% 0 30% 0;">
-									Identity Design
-								</span>
-						</span>
-					</div>
-					</a>
-				</div>
-
-				<div class="project-item">
-					<a href="opd/index.html">
-						<div id="je-motion" style="max-width:300px">
-							<span class="title-wrapper">
-								<span class="title" style="margin: -3% 0 30% 0;">
-									Outpost Digital
-								</span>
-							</span>
-						</div>
-					</a>
-				</div>
-
-				<div class="project-item">
-					<a href="hp/index.html">
-						<img src="../site/assets/hp.jpg" width="1200" height="600" style="max-width:600px" alt="">
-						<span class="title-wrapper">
-							<span class="title">
-								HP Enterprise
-							</span>
-						</span>
-					</a>
-				</div>
+          <a href="work/hp/index.html">
+            <img src="site/assets/hp.jpg" width="1200" height="600" style="max-width:600px" alt="">
+            <span class="title-wrapper">
+              <span class="title">
+                HP Enterprise
+              </span>
+            </span>
+          </a>
+        </div>
 
         <div class="project-item">
-          <a href="invue/index.html">
+
+          <div class="title-skrim" style="height: 600px;padding-top: 8em;">InVue</div>
+
+          <a href="work/invue/index.html">
             <div id="je-motion-invue" style="max-width:300px">
               <span class="title-wrapper">
                 <span class="title">
@@ -154,57 +175,72 @@
           </a>
         </div>
 
-				<div class="project-item">
-					<a href="thelife/index.html">
-						<div id="je-motion-life" style="max-width:300px">
-							<span class="title-wrapper">
-								<span class="title" style="margin: -3% 0 30% 0;">
-									ESPN The Life
-								</span>
-							</span>
-						</div>
-					</a>
-				</div>
+        <div class="project-item">
 
-				<div class="project-item">
-					<a href="taxfree/index.html">
-						<img src="../site/assets/taxfree.jpg" width="600" height="600" style="max-width:300px" alt="">
-						<span class="title-wrapper">
-							<span class="title" style="margin: -10% 0 30% 0;">
-								Tax Free World Association</span>
-						</span>
-					</a>
-				</div>
+          <div class="title-skrim">ESPN The Life</div>
 
-				<div class="project-item">
-					<a href="nes/index.html">
-						<img src="../site/assets/nes.jpg" width="600" height="600" style="max-width:300px" alt="">
-						<span class="title-wrapper">
-							<span class="title" style="margin: -10% 0 30% 0;">
-								NASA Explorer Schools</span>
-						</span>
-					</a>
-				</div>
+          <a href="work/thelife/index.html">
+            <div id="je-motion-life" style="max-width:300px">
+              <span class="title-wrapper">
+                <span class="title" style="margin: -3% 0 30% 0;">
+                  ESPN The Life
+                </span>
+              </span>
+            </div>
+          </a>
+        </div>
 
-				<div class="project-item">
-					<a href="cbb/index.html">
-						<img src="../site/assets/cbb.jpg" width="600" height="600" style="max-width:300px" alt="">
-						<span class="title-wrapper">
-							<span class="title" style="margin: -10% 0 30% 0;">
-								Big Brothers & Big Sisters of Los Angeles</span>
-						</span>
-					</a>
-				</div>
+        <div class="project-item">
 
-				<div class="project-item">
-					<a href="knopf/index.html">
-						<img src="../site/assets/knopf.jpg" width="1200" height="600" style="max-width:600px" alt="">
-						<span class="title-wrapper">
-							<span class="title">
-								Knopf</span>
-						</span>
-					</a>
-				</div>
+          <div class="title-skrim">Tax Free World Association</div>
+
+          <a href="work/taxfree/index.html">
+            <img src="site/assets/taxfree.jpg" width="600" height="600" style="max-width:300px" alt="">
+            <span class="title-wrapper">
+              <span class="title" style="margin: -10% 0 30% 0;">
+                Tax Free World Association</span>
+            </span>
+          </a>
+        </div>
+
+        <div class="project-item">
+
+          <div class="title-skrim">NASA Explorer Schools</div>
+
+          <a href="work/nes/index.html">
+            <img src="site/assets/nes.jpg" width="600" height="600" style="max-width:300px" alt="">
+            <span class="title-wrapper">
+              <span class="title" style="margin: -10% 0 30% 0;">
+                NASA Explorer Schools</span>
+            </span>
+          </a>
+        </div>
+
+        <div class="project-item">
+
+          <div class="title-skrim" style="padding-top: 3em;">Big Brothers & Big Sisters of Los Angeles</div>
+
+          <a href="work/cbb/index.html">
+            <img src="site/assets/cbb.jpg" width="600" height="600" style="max-width:300px" alt="">
+            <span class="title-wrapper">
+              <span class="title" style="margin: -10% 0 30% 0;">
+                Big Brothers & Big Sisters of Los Angeles</span>
+            </span>
+          </a>
+        </div>
+
+        <div class="project-item">
+
+          <div class="title-skrim" style="width: 100%; padding-top: 20%;">Knopf</div>
+
+          <a href="work/knopf/index.html">
+            <img src="site/assets/knopf.jpg" width="1200" height="600" style="max-width:600px" alt="">
+            <span class="title-wrapper">
+              <span class="title">
+                Knopf</span>
+            </span>
+          </a>
+        </div>
 
 	</div>
 </div>
