outpost bc switch

--- a/work/index.html
+++ b/work/index.html
@@ -176,14 +176,14 @@
 
         <div class="project-item">
 
-          <div class="title-skrim">Brite Class</div>
+          <div class="title-skrim">Outpost Digital</div>
 
-          <a href="work/bc/index.html">
-            <div id="je-motion-bc" style="max-width:300px">
+          <a href="work/opd/index.html">
+            <div id="je-motion" style="max-width:300px">
               <span class="title-wrapper">
-               <span class="title">
-                Brite Class
-               </span>
+                <span class="title" style="margin: -3% 0 30% 0;">
+                  Outpost Digital
+                </span>
               </span>
             </div>
           </a>
@@ -202,18 +202,18 @@
             </span>
           </div>
           </a>
-        </div>
+        </div>w
 
         <div class="project-item">
 
-          <div class="title-skrim">Outpost Digital</div>
+          <div class="title-skrim">Brite Class</div>
 
-          <a href="work/opd/index.html">
-            <div id="je-motion" style="max-width:300px">
+          <a href="work/bc/index.html">
+            <div id="je-motion-bc" style="max-width:300px">
               <span class="title-wrapper">
-                <span class="title" style="margin: -3% 0 30% 0;">
-                  Outpost Digital
-                </span>
+               <span class="title">
+                Brite Class
+               </span>
               </span>
             </div>
           </a>
