--- a/work/bc/index.html
+++ b/work/bc/index.html
@@ -26,6 +26,7 @@
 
     <!-- MasterSlider main JS file -->
     <script src="../masterslider/masterslider.min.js"></script>
+    <script src="../../js/zoom.js"></script>
 
     <script>
       window['_fs_debug'] = false;
@@ -47,7 +48,7 @@
     </script>
 
   </head>
-  <body>
+  <body runat="server" id="Body" style="zoom:100%">
 
   <style type="text/css">
 
@@ -102,6 +103,9 @@
           </a>
       </div>
     </div>
+
+    <div id="zoom-in-but"></div>
+    <div id="zoom-out-but"></div>
 
 <div class="project">
 
