--- a/work/identity/index.html
+++ b/work/identity/index.html
@@ -26,6 +26,7 @@
     <!-- <style> .ms-slide-container {top: 20px;}</style> -->
     <!-- MasterSlider main JS file -->
     <script src="../masterslider/masterslider.min.js"></script>
+    <script src="../../js/zoom.js"></script>
 
     <script>
       window['_fs_debug'] = false;
@@ -103,6 +104,8 @@
       </div>
     </div>
 
+    <div id="zoom-in-but"></div>
+    <div id="zoom-out-but"></div>
 
 <div class="page-wrap">
   <div class="project">
