--- a/work/index.html
+++ b/work/index.html
@@ -10,7 +10,9 @@
     <script src="site/templates/bower_components/modernizr/modernizr.js"></script>
     <link href="http://maxcdn.bootstrapcdn.com/div.je-top-bar.stickyawesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Playfair+Display:700,900|Fira+Sans:400,400italic' rel='stylesheet' type='	text/css'>
-		<link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400,700" rel="stylesheet" type='text/css'><meta name="google-site-verification" content="UIb5nhSu7_OaR_ApnQD-f7YUCF-LDLqRF5yFW07TZdg" />
+		<link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400,700" rel="stylesheet" type='text/css'>
+    <script src="../../js/zoom.js"></script>
+    <meta name="google-site-verification" content="UIb5nhSu7_OaR_ApnQD-f7YUCF-LDLqRF5yFW07TZdg" />
     <script>
       window['_fs_debug'] = false;
       window['_fs_host'] = 'fullstory.com';
@@ -139,6 +141,9 @@
     		</a>
   		</div>
 		</div>
+
+    <div id="zoom-in-but"></div>
+    <div id="zoom-out-but"></div>
 
 		<div class="work-page-back">
 
