--- a/work/nes/index.html
+++ b/work/nes/index.html
@@ -8,6 +8,7 @@
     <title>JON EVA | NASA Explorer School</title>
     <meta name="description" content="" />
     <link rel="stylesheet" href="../../site/templates/css/app.css" />
+    <link rel="stylesheet" href="../../site/templates/css/zoom.css" />
     <script src="../../site/templates/bower_components/modernizr/modernizr.js"></script>
     <script src="http://use.typekit.net/aqc3bdt.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
