--- a/work/ec/index.html
+++ b/work/ec/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../site/templates/css/app.css" />
     <link rel="stylesheet" href="../../site/templates/css/zoom.css" />
     <script src="../../site/templates/bower_components/modernizr/modernizr.js"></script>
-    <script src="http://use.typekit.net/aqc3bdt.js"></script>
+    <!-- <script src="http://use.typekit.net/aqc3bdt.js"></script> -->
     <script>try{Typekit.load();}catch(e){}</script>
     <link href="https://fonts.googleapis.com/css?family=Martel:200,300,400,600,700,800,900" rel="stylesheet">
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
