--- a/work/identity/index.html
+++ b/work/identity/index.html
@@ -51,8 +51,14 @@
   </head>
   <body style="height: 100%;background: rgba(56, 56, 56, 1);">
 
-  <style type="text/css">
-
+  <!-- hide "zoom" buttons on touch devices -->
+  <style>
+    @media (hover:none), (hover:on-demand) {
+      #zoom-in-but,
+      #zoom-out-but {
+        display: none;
+      }
+    }
   </style>
 
     <!-- Full Screen Menu -->
