--- a/work/index.html
+++ b/work/index.html
@@ -7,9 +7,9 @@
     <title>JON EVA | Product Designer | Interaction Designer</title>
     <meta name="description" content="Specializing in building native mobile and web apps from zero to feature complete in verticals not limited to; education, finance, business management, retail and sports. A business and technology foundation built on years of interaction design, motion design, brand development and marketing experience." />
     <link rel="stylesheet" href="../site/templates/css/app.css" />
-    <link rel="stylesheet" href="../../site/templates/css/zoom.css" />
+    <link rel="stylesheet" href="../../site/templates/css/touch.css" />
     <script src="site/templates/bower_components/modernizr/modernizr.js"></script>
-    <link href="http://maxcdn.bootstrapcdn.com/div.je-top-bar.stickyawesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Playfair+Display:700,900|Fira+Sans:400,400italic' rel='stylesheet' type='	text/css'>
 		<link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400,700" rel="stylesheet" type='text/css'>
     <script src="../../js/zoom.js"></script>
@@ -82,12 +82,34 @@
       left: 0;
       top: 0;
     }
-    .title-skrim,
-    #ec-touch {
+   .title-skrim,
+    #ec-touch,
+    #invue-touch,
+    #opd-touch,
+    #qiq-touch,
+    #hp-touch,
+    #bc-touch,
+    #sb-touch,
+    #thelife-touch,
+    #taxfree-touch,
+    #nes-touch,
+    #cbb-touch,
+    #knopf-touch {
       display: block;
     }
 
-    #je-motion-ec {
+    #je-motion-ec,
+    #je-motion-invue,
+    #je-motion,
+    #je-motion-qiq,
+    #je-motion-bc,
+    #hp-hover,
+    #sb-hover,
+    #je-motion-life,
+    #taxfree-hover,
+    #nes-hover,
+    #cbb-hover,
+    #knopf-hover {
       display: none;
     }
 
@@ -148,34 +170,33 @@
   		</div>
 		</div>
 
-    <div id="zoom-in-but"></div>
-    <div id="zoom-out-but"></div>
-
 		<div class="work-page-back">
 
 			<div id="work">
 
         <div class="project-item">
-
-          <div class="title-skrim">Employee Channel</div>
-
           <a href="work/ec/index.html">
-              <div id="je-motion-ec" style="max-width:300px">
-                <span class="title-wrapper">
-                  <span class="title" style=" margin: -3% 0 30% 0;background-color: rgba(255, 255, 255, 0);">
-                    Employee Channel
-                  </span>
+            <!-- Touch device title area -->
+            <div class="title-skrim">Employee Channel</div>
+            <div id="ec-touch"></div>
+            <!-- Desktop (non-touch) title area -->
+            <div id="je-motion-ec" style="max-width:300px">
+              <span class="title-wrapper">
+                <span class="title" style=" margin: -3% 0 30% 0;background-color: rgba(255, 255, 255, 0);">
+                  Employee Channel
                 </span>
-              </div>
+              </span>
+            </div>
           </a>
         </div>
 
         <div class="project-item">
-
-          <div class="title-skrim" style="height: 600px;padding-top: 8em;">InVue</div>
-
           <a href="work/invue/index.html">
-            <div id="je-motion-invue" style="max-width:300px">
+            <!-- Touch device title area -->
+            <div class="title-skrim" style="height: 600px;padding-top: 8em;">InVue</div>
+            <div id="invue-touch"></div>
+            <!-- Desktop (non-touch) title area -->
+            <div id="je-motion-invue" width="600" height="1200" style="max-width:300px">
               <span class="title-wrapper">
                 <span class="title">
                   InVue
@@ -186,10 +207,11 @@
         </div>
 
         <div class="project-item">
-
-          <div class="title-skrim">Outpost Digital</div>
-
           <a href="work/opd/index.html">
+            <!-- Touch device title area -->
+            <div class="title-skrim">Outpost Digital</div>
+            <div id="opd-touch"></div>
+            <!-- Desktop (non-touch) title area -->
             <div id="je-motion" style="max-width:300px">
               <span class="title-wrapper">
                 <span class="title" style="margin: -3% 0 30% 0;">
@@ -201,29 +223,31 @@
         </div>
 
         <div class="project-item">
-
-          <div class="title-skrim">Identity Design</div>
-
           <a href="work/identity/index.html">
+            <!-- Touch device title area -->
+            <div class="title-skrim">Identity Design</div>
+            <div id="qiq-touch"></div>
+            <!-- Desktop (non-touch) title area -->
             <div id="je-motion-qiq" style="max-width:300px">
               <span class="title-wrapper">
                 <span class="title" style="margin: -3% 0 30% 0;">
                   Identity Design
                 </span>
-            </span>
-          </div>
+              </span>
+             </div>
           </a>
-        </div>w
+        </div>
 
         <div class="project-item">
-
-          <div class="title-skrim">Brite Class</div>
-
           <a href="work/bc/index.html">
+            <!-- Touch device title area -->
+            <div class="title-skrim">Brite Class</div>
+            <div id="bc-touch"></div>
+            <!-- Desktop (non-touch) title area -->
             <div id="je-motion-bc" style="max-width:300px">
               <span class="title-wrapper">
                <span class="title">
-                Brite Class
+                  Brite Class
                </span>
               </span>
             </div>
@@ -231,38 +255,45 @@
         </div>
 
         <div class="project-item">
-
-          <div class="title-skrim" style="width: 100%; padding-top: 20%;">HP Enterprise</div>
-
           <a href="work/hp/index.html">
-            <img src="site/assets/hp.jpg" width="1200" height="600" style="max-width:600px" alt="">
-            <span class="title-wrapper">
-              <span class="title">
-                HP Enterprise
+            <!-- Touch device title area -->
+            <div class="title-skrim" style="width: 100%; padding-top: 20%;">HP Enterprise</div>
+            <div id="hp-touch"></div>
+            <!-- Desktop (non-touch) title area -->
+            <div id="hp-hover">
+              <img src="site/assets/hp.jpg" width="1200" height="600" style="max-width:600px">
+              <span class="title-wrapper">
+               <span class="title">
+                 HP Enterprise
+               </span>
               </span>
-            </span>
+            </div>
           </a>
         </div>
 
         <div class="project-item">
-
-          <div class="title-skrim" style="height: 600px;padding-top: 8em;">Superbowl 35</div>
-
           <a href="work/superbowl/index.html">
-            <img src="site/assets/sb35.jpg" width="600" height="1200" style="max-width:300px" alt="">
-            <span class="title-wrapper">
-              <span class="title">
-                Superbowl 35
+            <!-- Touch device title area -->
+            <div class="title-skrim" style="height: 600px;padding-top: 8em;">Superbowl 35</div>
+            <div id="sb-touch"></div>
+            <!-- Desktop (non-touch) title area -->
+            <div id="sb-hover">
+              <img src="site/assets/sb35.jpg" width="600" height="1200" style="max-width:300px">
+                <span class="title-wrapper">
+                <span class="title">
+                  Superbowl 35
+                </span>
               </span>
-            </span>
+            </div>
           </a>
         </div>
 
         <div class="project-item">
-
-          <div class="title-skrim">ESPN The Life</div>
-
           <a href="work/thelife/index.html">
+            <!-- Touch device title area -->
+            <div class="title-skrim">ESPN The Life</div>
+            <div id="thelife-touch"></div>
+            <!-- Desktop (non-touch) title area -->
             <div id="je-motion-life" style="max-width:300px">
               <span class="title-wrapper">
                 <span class="title" style="margin: -3% 0 30% 0;">
@@ -274,54 +305,70 @@
         </div>
 
         <div class="project-item">
-
-          <div class="title-skrim">Tax Free World Association</div>
-
           <a href="work/taxfree/index.html">
-            <img src="site/assets/taxfree.jpg" width="600" height="600" style="max-width:300px" alt="">
-            <span class="title-wrapper">
-              <span class="title" style="margin: -10% 0 30% 0;">
-                Tax Free World Association</span>
-            </span>
-          </a>
+            <!-- Touch device title area -->
+            <div class="title-skrim">Tax Free World Association</div>
+            <div id="taxfree-touch"></div>
+            <!-- Desktop (non-touch) title area -->
+            <div id="taxfree-hover">
+              <img src="site/assets/taxfree.jpg" width="600" height="600" style="max-width:300px" alt="">
+                <span class="title-wrapper">
+                  <span class="title" style="margin: -10% 0 30% 0;">
+                    Tax Free World Association
+                  </span>
+                </span>
+              </div>
+           </a>
         </div>
 
         <div class="project-item">
-
-          <div class="title-skrim">NASA Explorer Schools</div>
-
           <a href="work/nes/index.html">
-            <img src="site/assets/nes.jpg" width="600" height="600" style="max-width:300px" alt="">
-            <span class="title-wrapper">
-              <span class="title" style="margin: -10% 0 30% 0;">
-                NASA Explorer Schools</span>
-            </span>
+            <!-- Touch device title area -->
+            <div class="title-skrim">NASA Explorer Schools</div>
+            <div id="nes-touch"></div>
+            <!-- Desktop (non-touch) title area -->
+            <div id="nes-hover">
+              <img src="site/assets/nes.jpg" width="600" height="600" style="max-width:300px" alt="">
+                <span class="title-wrapper">
+                  <span class="title" style="margin: -10% 0 30% 0;">
+                    NASA Explorer Schools
+                  </span>
+                </span>
+            </div>
           </a>
         </div>
 
         <div class="project-item">
-
-          <div class="title-skrim" style="padding-top: 3em;">Big Brothers & Big Sisters of Los Angeles</div>
-
           <a href="work/cbb/index.html">
-            <img src="site/assets/cbb.jpg" width="600" height="600" style="max-width:300px" alt="">
-            <span class="title-wrapper">
-              <span class="title" style="margin: -10% 0 30% 0;">
-                Big Brothers & Big Sisters of Los Angeles</span>
-            </span>
+            <!-- Touch device title area -->
+            <div class="title-skrim" style="padding-top: 3em;">Big Brothers & Big Sisters of Los Angeles</div>
+            <div id="cbb-touch"></div>
+            <!-- Desktop (non-touch) title area -->
+            <div id="cbb-hover">
+              <img src="site/assets/cbb.jpg" width="600" height="600" style="max-width:300px" alt="">
+                <span class="title-wrapper">
+                  <span class="title" style="margin: -10% 0 30% 0;">
+                    Big Brothers & Big Sisters of Los Angeles
+                  </span>
+                </span>
+            </div>
           </a>
         </div>
 
         <div class="project-item">
-
-          <div class="title-skrim" style="width: 100%; padding-top: 20%;">Knopf</div>
-
           <a href="work/knopf/index.html">
-            <img src="site/assets/knopf.jpg" width="1200" height="600" style="max-width:600px" alt="">
-            <span class="title-wrapper">
-              <span class="title">
-                Knopf</span>
-            </span>
+            <!-- Touch device title area -->
+            <div class="title-skrim" style="width: 100%; padding-top: 20%;">Knopf</div>
+            <div id="knopf-touch"></div>
+            <!-- Desktop (non-touch) title area -->
+            <div id="knopf-hover">
+              <img src="site/assets/knopf.jpg" width="1200" height="600" style="max-width:600px" alt="">
+                <span class="title-wrapper">
+                  <span class="title">
+                    Knopf
+                  </span>
+                </span>
+            </div>
           </a>
         </div>
 
