work index sync 2

--- a/work/index.html
+++ b/work/index.html
@@ -261,7 +261,7 @@
             <div id="hp-touch"></div>
             <!-- Desktop (non-touch) title area -->
             <div id="hp-hover">
-              <img src="site/assets/hp.jpg" width="1200" height="600" style="max-width:600px">
+              <img src="../site/assets/hp.jpg" width="1200" height="600" style="max-width:600px">
               <span class="title-wrapper">
                <span class="title">
                  HP Enterprise
