work index sync 3

--- a/work/index.html
+++ b/work/index.html
@@ -278,7 +278,7 @@
             <div id="sb-touch"></div>
             <!-- Desktop (non-touch) title area -->
             <div id="sb-hover">
-              <img src="site/assets/sb35.jpg" width="600" height="1200" style="max-width:300px">
+              <img src="../site/assets/sb35.jpg" width="600" height="1200" style="max-width:300px">
                 <span class="title-wrapper">
                 <span class="title">
                   Superbowl 35
@@ -311,7 +311,7 @@
             <div id="taxfree-touch"></div>
             <!-- Desktop (non-touch) title area -->
             <div id="taxfree-hover">
-              <img src="site/assets/taxfree.jpg" width="600" height="600" style="max-width:300px" alt="">
+              <img src="../site/assets/taxfree.jpg" width="600" height="600" style="max-width:300px" alt="">
                 <span class="title-wrapper">
                   <span class="title" style="margin: -10% 0 30% 0;">
                     Tax Free World Association
@@ -328,7 +328,7 @@
             <div id="nes-touch"></div>
             <!-- Desktop (non-touch) title area -->
             <div id="nes-hover">
-              <img src="site/assets/nes.jpg" width="600" height="600" style="max-width:300px" alt="">
+              <img src="../site/assets/nes.jpg" width="600" height="600" style="max-width:300px" alt="">
                 <span class="title-wrapper">
                   <span class="title" style="margin: -10% 0 30% 0;">
                     NASA Explorer Schools
@@ -345,7 +345,7 @@
             <div id="cbb-touch"></div>
             <!-- Desktop (non-touch) title area -->
             <div id="cbb-hover">
-              <img src="site/assets/cbb.jpg" width="600" height="600" style="max-width:300px" alt="">
+              <img src="../site/assets/cbb.jpg" width="600" height="600" style="max-width:300px" alt="">
                 <span class="title-wrapper">
                   <span class="title" style="margin: -10% 0 30% 0;">
                     Big Brothers & Big Sisters of Los Angeles
@@ -362,7 +362,7 @@
             <div id="knopf-touch"></div>
             <!-- Desktop (non-touch) title area -->
             <div id="knopf-hover">
-              <img src="site/assets/knopf.jpg" width="1200" height="600" style="max-width:600px" alt="">
+              <img src="../site/assets/knopf.jpg" width="1200" height="600" style="max-width:600px" alt="">
                 <span class="title-wrapper">
                   <span class="title">
                     Knopf
