bc description update

--- a/work/bc/index.html
+++ b/work/bc/index.html
@@ -162,7 +162,7 @@
 
           <h1 class="animated wow fadeIn" data-wow-delay="0s">
           Brite Class</h1>
-          <p class="JE-description">Briteclass is a classroom extension enterprise software suite. It digitally records class media, student / professor interactions during class and student collaboration using traditional social media tools. Professors can also assess student comprehension and participation using live metrics reports.
+          <p class="JE-description">Briteclass is a classroom extension enterprise software suite. It digitally records class media, student / professor interactions during class and student collaboration using traditional social media paradigms. Professors can also assess student comprehension and participation using live metrics tools.
           </p>
 
         </div>
