Case study temp

--- a/work/ec-case/index.html
+++ b/work/ec-case/index.html
@@ -33,11 +33,9 @@
 
     <link rel="stylesheet" href="../../css/style.css"> <!-- Resource style -->
 
-    <script src="js/modernizr.js"></script> <!-- Modernizr -->
+    <script src="../../js/modernizr.js"></script> <!-- Modernizr -->
     <!-- <script src="js/clock.js"></script> -->
-    <script src="js/opening_timeline_ani.js"></script>
-    <!-- <script src="js/vert_timeline.js"></script> -->
-    <script src="js/lightbox.js"></script>
+    <script src="../../js/lightbox.js"></script>
 
 
   </head>
@@ -49,7 +47,7 @@
 
     <!-- Full Screen Menu -->
 
-    <div id="primary-navigation">
+<!--     <div id="primary-navigation">
       <div class="inner">
         <a href="index.html#" class="close-primary-navigation">
           <img src="../../site/templates/images/menu_close@2x.png" style="width: 22px;height: 22px;margin-left:10px; margin-bottom: 2px" />
@@ -85,13 +83,13 @@
           </li>
         </ul>
       </div>
-    </div>
+    </div> -->
 
     <!-- main content / not off canvas -->
-    <div class="je-top-bar sticky ">
+    <div class="je-top-bar sticky">
       <div class="inner">
         <h1><a href="../../">JON EVA <span id="je-id">| PRODUCT DESIGNER</span></a></h1>
-          <a class="hamburger-v2 open-primary-navigation" href="index.html#">
+          <a class="hamburger-v2 open-primary-navigation" href="index.html#" style="display:none;">
           <img src="../../site/templates/images/menu@2x.png" />
           </a>
       </div>
@@ -104,8 +102,8 @@
   <!-- sections -->
   <div class="project-sections">
     <div class="project-section add-padding" style="background-color:#FFF">
-      <div class="row">
-        <div class="small-12 medium-8 large-8 columns wow fadeIn" data-wow-offset="10">
+      <div class="row" style="padding: 0 10rem;max-width: 90rem;">
+        <div class="small-12 medium-8 large-8 columns wow fadeIn" style="width: auto;padding-left:0;" data-wow-offset="10">
 
           <h1 class="animated wow fadeIn" data-wow-delay="0s" style="margin-left: -4px">
           <div class="case-study-tag">CASE STUDY</div>
@@ -132,7 +130,7 @@
               </ol>
 
               <div class="case-title">Insights</div>
-                <div class="JE-subhead">UX research of the initial MVP found that employee respondents:</div>
+                <div class="JE-subhead" >UX research of the initial MVP found that employee respondents:</div>
                 <ul>
                   <li class="normal-li">
                     would engage in a mobile experience if it wasn’t too difficult to set-up
@@ -155,36 +153,32 @@
                   </li>
                 </ul>
 
-<iframe src="rhino.php" scrolling="no" frameborder="0" height="14900"></iframe>
+                <div>
+                    <div class="case-title">Team</div>
+                      <ul>
+                        <li class="normal-li">VP of Product</li>
+                        <li class="normal-li" style="font-weight:700;">Senior Product Designer (me)</li>
+                        <li class="normal-li">Systems Architect</li>
+                        <li class="normal-li">Front-End Engineer</li>
+                        <li class="normal-li">UI Engineer</li>
+                      </ul>
+
+                    <div class="case-title">Contribution</div>
+                      <ul>
+                        <li class="normal-li">Design Research</li>
+                        <li class="normal-li">Product design</li>
+                        <li class="normal-li">Art direction</li>
+                        <li class="normal-li">UX/UI design</li>
+                        <li class="normal-li">Prototypes</li>
+                        <li class="normal-li">CSS/Sass</li>
+                        <li class="normal-li">UX research and testing</li>
+                        <li class="normal-li">QA</li>
+                      </ul>
+                </div>
+
+<iframe src="rhino.html" scrolling="no" frameborder="0" height="15300"></iframe>
 
         </div>
-        <div class="small-12 medium-4 large-3 columns">
-          <div class="project-meta wow fadeIn" data-wow-offset="10">
-            <div class="je-flash">
-
-            <h4>Team</h4>
-              <p class="deliverables">
-              Product Manager<br/>
-              Senior Product Designer (me)<br/>
-              Systems Architect<br/>
-              Front-End Engineer<br/>
-              UI Engineer
-              </p>
-
-            <h4>Contribution</h4>
-              <p class="deliverables">
-              Design Research<br/>
-              Product design<br/>
-              Art direction<br/>
-              UX/UI design<br/>
-              Prototypes<br/>
-              CSS/Sass<br/>
-              UX research and testing<br/>
-              QA
-              </p>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 
