Case study small fix

--- a/work/ec-case/rhino.html
+++ b/work/ec-case/rhino.html
@@ -43,7 +43,7 @@
 					</video>
 				</div>
 
-				<div class="caption">
+				<div class="caption" style="padding: 1.6em 0 0 0;">
 					One of the biggest hurdles for the app to overcome was ensuring safe and secure storage of employees’ private data, including a year-long HIPPA approval process. The challenge was to make the sign-in process secure while allowing employees to easily and frequently log in. We chose to make biometrics an MVP requirement.
 				</div>
 
