Case study add slides

--- a/work/ec-case/rhino.html
+++ b/work/ec-case/rhino.html
@@ -137,11 +137,7 @@
 					</div>
 
 					<div class="caption">
-						Existing blogging and publishing software were researched to determine best practices and focused on a mobile first approach.
-					</div>
-
-					<div class="caption">
-						In refining the prototype, the team identified the need to build a publication index  and recipient tool.
+						Existing blogging and publishing software were researched to determine best practices and focused on a mobile first approach. In refining the prototype, the team identified the need to build a publication index  and recipient tool.
 					</div>
 
 					<div class="caption">
