--- a/work/ec-case/index.html
+++ b/work/ec-case/index.html
@@ -97,7 +97,34 @@
 
 <div class="project">
 
+  <!-- template -->
+  <div class="ms-filters-template">
+        <!-- masterslider -->
+          <div class="master-slider ms-skin-contrast" id="masterslider">
 
+            <div class="ms-slide" data-fill-mode="fit" data-delay="5">
+
+                <!-- slide background -->
+                <img src="img/1-ECtimeline.gif" style=" position: relative;top: -2px;"/>
+
+                <!-- slide background video -->
+                <video data-autopause="true" data-mute="false" data-loop="false" data-fill-mode="fill">
+                    <source id="mp4" src="../../work/ec/img/1-ECtimeline.mp4" type="video/mp4"/>
+                </video>
+            </div>
+            <div class="ms-slide">
+                <img src="../masterslider/style/blank.gif" data-src="../../work/ec/img/2-ECscreens.jpg" alt=""/>
+            </div>
+            <div class="ms-slide">
+              <img src="../masterslider/style/blank.gif" data-src="../../work/ec/img/3-ECicons.png" alt=""/>
+            </div>
+            <div class="ms-slide">
+              <img src="../masterslider/style/blank.gif" data-src="../../work/ec/img/4-ECadmin.jpg" alt=""/>
+            </div>
+          </div>
+        <!-- end of masterslider -->
+  </div>
+  <!-- end of template -->
 
   <!-- sections -->
   <div class="project-sections">
